Compile with and for Java 17 by default